# pytorch-vanishing-point-calibration

./: .gitignore  README.md  pyproject.toml
pretrained/: paper_split_v1_best_model.pt
scripts/: create_vp_split.py  download_culane.py  generate_vp_gt.py  infer_vp_model.py  plot_training_history.py  train_vp_model.py  visualize_model_predictions.py  visualize_vp_gt.py
src/datasets/: __init__.py  culane.py  vp_regression.py
src/geometry/: __init__.py  vp_to_extrinsics.py
src/gt/: __init__.py  vp_from_lanes.py
src/models/: paper_vp_cnn.py
src/training/: device.py  vp_metrics.py
